Add controler for querying steam workshop